Segunda entrega CoderHose

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </nav>
         </div>
     </section>
-    <main>
+    <main class="mainindex">
         <section class="section-one">
             <img src="/img/Lake Blue Mountain Water River Nature.jpg" alt="" class="section-one__img">
             <h1>We propose you to travel the world in a different way. Be encouraged to live together with Work & travel a professional and work experience abroad. We want you to have the opportunity to meet, learn and enjoy</h1>
