--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -6,6 +6,7 @@
     <title>Work & Travel</title>
     <link rel="shortcut icon" href="../img/plane.png">
     <link rel="stylesheet" href="../style/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
     <section class="top-page">
@@ -22,9 +23,66 @@
                 <li class="nav-ul__li"><a href="/pages/contactus.html" class="link"><b>CONTACT US</b></a></li>
             </ul>
         </nav>
+        <div class="navresponsive">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <div class="navresponsive__div"><a href="/index.html"><img src="/img/circle logo.png" alt="" class="navresponsive__img"></a></div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
+                        <span class="navbar-toggler-icon" ></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
+                        <div class="navbar-nav">
+                        <a class="nav-link" href="/pages/travels.html">Travels</a>
+                        <a class="nav-link" href="/pages/whatweoffer.html">What we offer</a>
+                        <a class="nav-link" href="/pages/aboutus.html">about us</a>
+                        <a class="nav-link" href="/pages/contactus.html">contact us</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </section>
-    <main>
-        <h1>Contact Us</h1>
+    <main class="maincontactus">
+        <section class="main__text" >
+            <h1>Contact us</h1>
+            <p>Thank you for your interest in our service. We would love to assist you. Please send us a message with the details of your inquiry. Our customer service team will review your message and get back to you as soon as possible.</p>
+        </section>
+        <section class="maincontactus__options white">
+            <form action="#" method="post" class="maincontactus__form">
+                <section class="maincontactus__form__top">
+                    <div class="box">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" class="input" required>
+                    </div>
+                    <div class="box">
+                        <label for="surname">Surname:</label>
+                        <input type="text" id="surname" name="surname" class="input" required>
+                    </div>
+                    <div class="box">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" class="input" required>
+                    </div>
+                </section>
+                <section class="maincontactus__form__mid">
+                    <div class="box">
+                        <label for="trips">Viaje al que te gustaría ir:</label>
+                        <select id="trips" name="trips" class="input" required>
+                            <option value="trip to USA(cold and snow)">Trip to USA(Cold and snow)</option>
+                            <option value="Trip to Spain">Trip to Spain</option>
+                            <option value="trip to USA(summer camp)">trip to USA(summer camp)</option>
+                        </select>
+                    </div>
+                    <div class="box">
+                        <label for="message" class="label__massege">Message:</label>
+                        <textarea id="message" name="message" class="input" required></textarea>
+                    </div>
+                </section>
+                <section class="maincontactus__form__bottom">
+                    <div>
+                        <input type="submit" value="Submit" class="input box__input">
+                    </div>
+                </section>
+        </section>
     </main>
     <section class="prefooter">
         <ul class="prefooter-ul">
