--- a/pages/whatweoffer.html
+++ b/pages/whatweoffer.html
@@ -6,6 +6,7 @@
     <title>Work & Travel</title>
     <link rel="shortcut icon" href="../img/plane.png">
     <link rel="stylesheet" href="../style/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
     <section class="top-page">
@@ -22,9 +23,36 @@
                 <li class="nav-ul__li"><a href="/pages/contactus.html" class="link"><b>CONTACT US</b></a></li>
             </ul>
         </nav>
+        <div class="navresponsive">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <div class="navresponsive__div"><a href="/index.html"><img src="/img/circle logo.png" alt="" class="navresponsive__img"></a></div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
+                        <span class="navbar-toggler-icon" ></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
+                        <div class="navbar-nav">
+                        <a class="nav-link" href="/pages/travels.html">Travels</a>
+                        <a class="nav-link" href="/pages/whatweoffer.html">What we offer</a>
+                        <a class="nav-link" href="/pages/aboutus.html">about us</a>
+                        <a class="nav-link" href="/pages/contactus.html">contact us</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </section>
-    <main>
-        <h1>what we offer</h1>
+    <main class="mainwhatweoffer">
+        <section class="main__text mainwhatweoffer__text">
+            <h1>Whats we Offer</h1>
+            <p>"Discover a world of job and cultural opportunities! At Work and Travel , we specialize in connecting our clients with employment companies worldwide. Our primary goal is to offer everyone the chance to explore the world, embrace new cultures, and enrich their professional expertise.</p>
+            <p>Imagine being able to travel to fascinating places while gaining valuable insights in your chosen field. Have you always dreamed of living in a vibrant metropolis, working on a paradise beach, or immersing yourself in the millennia-old history of an exotic country? With Work and Travel, all of this is possible.</p>
+            <p>Our team will facilitate the contact between our clients and the finest international companies. With just one phone call, you'll be one step closer to fulfilling your dream of exploring the world and broadening your professional horizons. Are you ready for a unique adventure?</p>
+            <p>Don't miss out on this incredible opportunity. Contact us today and start carving your own global path. The world is waiting for you to discover it!"</p>
+        </section>
+        <section class="mainwhatweoffer__bottom">
+            <button class="mainwhatweoffer__button"><a href="/pages/contactus.html" class="link w"><h3>Contact us</h3></a></button>
+        </section>
     </main>
     <section class="prefooter">
         <ul class="prefooter-ul">
