--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -65,11 +65,12 @@
                 </section>
                 <section class="maincontactus__form__mid">
                     <div class="box">
-                        <label for="trips">Viaje al que te gustaría ir:</label>
+                        <label for="trips">Trip you would like to go:</label>
                         <select id="trips" name="trips" class="input" required>
+                            <option value="none yet">None yet</option>
                             <option value="trip to USA(cold and snow)">Trip to USA(Cold and snow)</option>
-                            <option value="Trip to Spain">Trip to Spain</option>
-                            <option value="trip to USA(summer camp)">trip to USA(summer camp)</option>
+                            <option value="trip to Spain">Trip to Spain</option>
+                            <option value="trip to USA(summer camp)">Trip to USA(summer camp)</option>
                         </select>
                     </div>
                     <div class="box">
