--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
         <p>Reservados todos los derechos ar | prod | ..... | 13/06/2023-17:08:33:345</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-<body>
+</body>
 </html>
 
