--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -43,15 +43,22 @@
         </div>
     </section>
     <main class="mainaboutus">
-        <section class="main__text" >
+        <section class="main__text " >
             <h1>About us</h1>
             <p>"We are a leading company with over a year of experience in the Work and Travel field. Our team consists of highly skilled professionals with extensive knowledge in work-related travel. We take pride in having a dedicated and passionate group of employees who stay updated on the latest trends and advancements in our industry.</p>
             <p>En Work and Travel, nos destacamos por nuestra excelencia en la ejecución de proyectos, brindando soluciones innovadoras y adaptadas a las necesidades de nuestros clientes. Nuestro equipo multidisciplinario, compuesto por expertos en brindar viajes por trabajo, trabaja en colaboración para ofrecer resultados sobresalientes y superar las expectativas.</p>
             <p>Quality is our top priority. Every project we undertake is approached with meticulousness and attention to detail, ensuring first-class outcomes. Moreover, we take pride in maintaining strong and lasting relationships with our clients, built on mutual trust and transparency.In addition to our expertise and specialized knowledge, we distinguish ourselves through our customer-oriented approach. We strive to thoroughly understand our clients' needs and work closely with them at every stage of the project. This collaboration enables us to offer personalized and efficient solutions that have a positive impact on their operations and final outcomes.</p>
-            <p>Not only do we stand out for our talent and professionalism, but also for our passion for excellence. We strive to stay at the forefront of our industry, constantly seeking new ways to improve and grow. Our commitment to innovation and continuous improvement drives us to push boundaries and maintain our position as industry leaders in the work-related travel domain.
-                At Work and Travel, we not only offer exceptional services but also believe in the value of building strong and lasting relationships. We value our employees and consider them integral to our success. We foster a collaborative and respectful work environment where every team member has the opportunity to grow and develop professionally.</p>
         </section>
-
+        <section class="Where to find us">
+            <section class="main__text">
+                <h1>Where to find us</h1>
+            </section>
+            <section class="map">
+            <div class="container__map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105160.15430051013!2d-58.58667814160014!3d-34.54710295093994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb594b2c72ed9%3A0xd9d2ea7f6db578d3!2sWATAR!5e0!3m2!1ses!2sar!4v1689713778369!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            </section>
+        </section>
     </main>
     <section class="prefooter">
         <ul class="prefooter-ul">
