--- a/pages/travels.html
+++ b/pages/travels.html
@@ -12,30 +12,30 @@
     <section class="top-page">
         <header>
             <section class="header-logo">
-                <a href="/index.html"><img src="../img/circle logo.png" alt="logo - plane - travel - work - work and travel"></a>
+                <a href=".././index.html"><img src=".././img/circle logo.png" alt=""></a>
             </section>
         </header>
         <nav clas="nav">
             <ul class="nav-ul">
-                <li class="nav-ul__li"><a href="/pages/travels.html" class="link"><b>TRAVELS</b></a></li>
-                <li class="nav-ul__li"><a href="/pages/whatweoffer.html" class="link"><b>WHAT WE OFFER</b></a></li>
-                <li class="nav-ul__li"><a href="/pages/aboutus.html" class="link"><b>ABOUT US?</b></a></li>
-                <li class="nav-ul__li"><a href="/pages/contactus.html" class="link"><b>CONTACT US</b></a></li>
+                <li class="nav-ul__li"><a href="./travels.html" class="link"><b>TRAVELS</b></a></li>
+                <li class="nav-ul__li"><a href="./whatweoffer.html" class="link"><b>WHAT WE OFFER</b></a></li>
+                <li class="nav-ul__li"><a href="./aboutus.html" class="link"><b>ABOUT US?</b></a></li>
+                <li class="nav-ul__li"><a href="./contactus.html" class="link"><b>CONTACT US</b></a></li>
             </ul>
         </nav>
         <div class="navresponsive">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <div class="navresponsive__div"><a href="/index.html"><img src="/img/circle logo.png" alt="" class="navresponsive__img"></a></div>
+                    <div class="navresponsive__div"><a href=".././index.html"><img src=".././img/circle logo.png" alt="" class="navresponsive__img"></a></div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
                         <span class="navbar-toggler-icon" ></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
                         <div class="navbar-nav">
-                        <a class="nav-link" href="/pages/travels.html">Travels</a>
-                        <a class="nav-link" href="/pages/whatweoffer.html">What we offer</a>
-                        <a class="nav-link" href="/pages/aboutus.html">about us</a>
-                        <a class="nav-link" href="/pages/contactus.html">contact us</a>
+                        <a class="nav-link" href="./travels.html">Travels</a>
+                        <a class="nav-link" href="./whatweoffer.html">What we offer</a>
+                        <a class="nav-link" href="./aboutus.html">about us</a>
+                        <a class="nav-link" href="./contactus.html">contact us</a>
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                     <div class="col-lg-6 column1">
                         <div class="row">
                             <div class="col-12 column1-img" >
-                                <div class="column__img"><a href="/pages/contactus.html"><img src="/img/Workandtravel in USA.jpg" alt=""></a></div>
+                                <div class="column__img"><a href="./contactus.html"><img src=".././img/Workandtravel in USA.jpg" alt=""></a></div>
                             </div>
                         </div>
                         <div class="row">
@@ -95,7 +95,7 @@
                     <div class="col-lg-6 column2">
                         <div class="row">
                             <div class="col-12 column2-img" >
-                                <div class="column__img"><a href="/pages/contactus.html"><img src="/img/Madrid_spanish.jpg" alt=""></a></div>
+                                <div class="column__img"><a href="./contactus.html"><img src=".././img/Madrid_spanish.jpg" alt=""></a></div>
                             </div>
                         </div>
                         <div class="row">
@@ -137,7 +137,7 @@
                     <div class="col-lg-6 column3">
                         <div class="row">
                             <div class="col-12 column3-img" >
-                                <div class="column__img"><a href="/pages/contactus.html"><img src="/img/sumer camp.jpg" alt=""></a></div>
+                                <div class="column__img"><a href="./contactus.html"><img src=".././img/sumer camp.jpg" alt=""></a></div>
                             </div>
                         </div>
                         <div class="row">
@@ -187,9 +187,9 @@
     </main>
     <section class="prefooter">
         <ul class="prefooter-ul">
-            <li class="prefooter-ul-li"><a href="https://www.facebook.com/Work & travels"><img src="/img/facebook icon.png" alt="facebook-icon"></a></li>
-            <li class="prefooter-ul-li"><a href="https://www.instagram.com/Work & travels/"><img src="/img/instagram icon.png" alt="instagram-icon"></a></li>
-            <li class="prefooter-ul-li"><a href="https://twitter.com/Work & travels"><img src="/img/twiter icon.png" alt="twiter-icon"></a></li>
+            <li class="prefooter-ul-li"><a href="https://www.facebook.com/Work & travels"><img src=".././img/facebook icon.png" alt="facebook-icon"></a></li>
+            <li class="prefooter-ul-li"><a href="https://www.instagram.com/Work & travels/"><img src=".././img/instagram icon.png" alt="instagram-icon"></a></li>
+            <li class="prefooter-ul-li"><a href="https://twitter.com/Work & travels"><img src=".././img/twiter icon.png" alt="twiter-icon"></a></li>
         </ul>
     </section>
     <footer>
