--- a/pages/whatweoffer.html
+++ b/pages/whatweoffer.html
@@ -12,30 +12,30 @@
     <section class="top-page">
         <header>
             <section class="header-logo">
-                <a href="/index.html"><img src="../img/circle logo.png" alt="logo - plane - travel - work - work and travel"></a>
+                <a href=".././index.html"><img src=".././img/circle logo.png" alt=""></a>
             </section>
         </header>
         <nav clas="nav">
             <ul class="nav-ul">
-                <li class="nav-ul__li"><a href="/pages/travels.html" class="link"><b>TRAVELS</b></a></li>
-                <li class="nav-ul__li"><a href="/pages/whatweoffer.html" class="link"><b>WHAT WE OFFER</b></a></li>
-                <li class="nav-ul__li"><a href="/pages/aboutus.html" class="link"><b>ABOUT US?</b></a></li>
-                <li class="nav-ul__li"><a href="/pages/contactus.html" class="link"><b>CONTACT US</b></a></li>
+                <li class="nav-ul__li"><a href="./travels.html" class="link"><b>TRAVELS</b></a></li>
+                <li class="nav-ul__li"><a href="./whatweoffer.html" class="link"><b>WHAT WE OFFER</b></a></li>
+                <li class="nav-ul__li"><a href="./aboutus.html" class="link"><b>ABOUT US?</b></a></li>
+                <li class="nav-ul__li"><a href="./contactus.html" class="link"><b>CONTACT US</b></a></li>
             </ul>
         </nav>
         <div class="navresponsive">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <div class="navresponsive__div"><a href="/index.html"><img src="/img/circle logo.png" alt="" class="navresponsive__img"></a></div>
+                    <div class="navresponsive__div"><a href=".././index.html"><img src=".././img/circle logo.png" alt="" class="navresponsive__img"></a></div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
                         <span class="navbar-toggler-icon" ></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
                         <div class="navbar-nav">
-                        <a class="nav-link" href="/pages/travels.html">Travels</a>
-                        <a class="nav-link" href="/pages/whatweoffer.html">What we offer</a>
-                        <a class="nav-link" href="/pages/aboutus.html">about us</a>
-                        <a class="nav-link" href="/pages/contactus.html">contact us</a>
+                        <a class="nav-link" href="./travels.html">Travels</a>
+                        <a class="nav-link" href="./whatweoffer.html">What we offer</a>
+                        <a class="nav-link" href="./aboutus.html">about us</a>
+                        <a class="nav-link" href="./contactus.html">contact us</a>
                         </div>
                     </div>
                 </div>
@@ -51,14 +51,14 @@
             <p>Don't miss out on this incredible opportunity. Contact us today and start carving your own global path. The world is waiting for you to discover it!"</p>
         </section>
         <section class="mainwhatweoffer__bottom">
-            <button class="mainwhatweoffer__button"><a href="/pages/contactus.html" class="link w"><h3>Contact us</h3></a></button>
+            <button class="mainwhatweoffer__button"><a href="./contactus.html" class="link"><h3>Contact us</h3></a></button>
         </section>
     </main>
     <section class="prefooter">
         <ul class="prefooter-ul">
-            <li class="prefooter-ul-li"><a href="https://www.facebook.com/Work & travels"><img src="/img/facebook icon.png" alt="facebook-icon"></a></li>
-            <li class="prefooter-ul-li"><a href="https://www.instagram.com/Work & travels/"><img src="/img/instagram icon.png" alt="instagram-icon"></a></li>
-            <li class="prefooter-ul-li"><a href="https://twitter.com/Work & travels"><img src="/img/twiter icon.png" alt="twiter-icon"></a></li>
+            <li class="prefooter-ul-li"><a href="https://www.facebook.com/Work & travels"><img src=".././img/facebook icon.png" alt="facebook-icon"></a></li>
+            <li class="prefooter-ul-li"><a href="https://www.instagram.com/Work & travels/"><img src=".././img/instagram icon.png" alt="instagram-icon"></a></li>
+            <li class="prefooter-ul-li"><a href="https://twitter.com/Work & travels"><img src=".././img/twiter icon.png" alt="twiter-icon"></a></li>
         </ul>
     </section>
     <footer>
