--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -4,38 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work & Travel</title>
-    <link rel="shortcut icon" href="../img/plane.png">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="shortcut icon" href=".././img/plane.png">
+    <link rel="stylesheet" href=".././style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
     <section class="top-page">
         <header>
             <section class="header-logo">
-                <a href="/index.html"><img src="../img/circle logo.png" alt="logo - plane - travel - work - work and travel"></a>
+                <a href=".././index.html"><img src=".././img/circle logo.png" alt=""></a>
             </section>
         </header>
         <nav clas="nav">
             <ul class="nav-ul">
-                <li class="nav-ul__li"><a href="/pages/travels.html" class="link"><b>TRAVELS</b></a></li>
-                <li class="nav-ul__li"><a href="/pages/whatweoffer.html" class="link"><b>WHAT WE OFFER</b></a></li>
-                <li class="nav-ul__li"><a href="/pages/aboutus.html" class="link"><b>ABOUT US?</b></a></li>
-                <li class="nav-ul__li"><a href="/pages/contactus.html" class="link"><b>CONTACT US</b></a></li>
+                <li class="nav-ul__li"><a href="./travels.html" class="link"><b>TRAVELS</b></a></li>
+                <li class="nav-ul__li"><a href="./whatweoffer.html" class="link"><b>WHAT WE OFFER</b></a></li>
+                <li class="nav-ul__li"><a href="./aboutus.html" class="link"><b>ABOUT US?</b></a></li>
+                <li class="nav-ul__li"><a href="./contactus.html" class="link"><b>CONTACT US</b></a></li>
             </ul>
         </nav>
         <div class="navresponsive">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <div class="navresponsive__div"><a href="/index.html"><img src="/img/circle logo.png" alt="" class="navresponsive__img"></a></div>
+                    <div class="navresponsive__div"><a href=".././index.html"><img src=".././img/circle logo.png" alt="" class="navresponsive__img"></a></div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
                         <span class="navbar-toggler-icon" ></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
                         <div class="navbar-nav">
-                        <a class="nav-link" href="/pages/travels.html">Travels</a>
-                        <a class="nav-link" href="/pages/whatweoffer.html">What we offer</a>
-                        <a class="nav-link" href="/pages/aboutus.html">about us</a>
-                        <a class="nav-link" href="/pages/contactus.html">contact us</a>
+                        <a class="nav-link" href="./travels.html">Travels</a>
+                        <a class="nav-link" href="./whatweoffer.html">What we offer</a>
+                        <a class="nav-link" href="./aboutus.html">about us</a>
+                        <a class="nav-link" href="./contactus.html">contact us</a>
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
         </div>
     </section>
     <main class="mainaboutus">
-        <section class="main__text " >
+        <section class="main__text">
             <h1>About us</h1>
             <p>"We are a leading company with over a year of experience in the Work and Travel field. Our team consists of highly skilled professionals with extensive knowledge in work-related travel. We take pride in having a dedicated and passionate group of employees who stay updated on the latest trends and advancements in our industry.</p>
             <p>En Work and Travel, nos destacamos por nuestra excelencia en la ejecución de proyectos, brindando soluciones innovadoras y adaptadas a las necesidades de nuestros clientes. Nuestro equipo multidisciplinario, compuesto por expertos en brindar viajes por trabajo, trabaja en colaboración para ofrecer resultados sobresalientes y superar las expectativas.</p>
@@ -62,9 +62,9 @@
     </main>
     <section class="prefooter">
         <ul class="prefooter-ul">
-            <li class="prefooter-ul-li"><a href="https://www.facebook.com/Work & travels"><img src="/img/facebook icon.png" alt="facebook-icon"></a></li>
-            <li class="prefooter-ul-li"><a href="https://www.instagram.com/Work & travels/"><img src="/img/instagram icon.png" alt="instagram-icon"></a></li>
-            <li class="prefooter-ul-li"><a href="https://twitter.com/Work & travels"><img src="/img/twiter icon.png" alt="twiter-icon"></a></li>
+            <li class="prefooter-ul-li"><a href="https://www.facebook.com/Work & travels"><img src=".././img/facebook icon.png" alt="facebook-icon"></a></li>
+            <li class="prefooter-ul-li"><a href="https://www.instagram.com/Work & travels/"><img src=".././img/instagram icon.png" alt="instagram-icon"></a></li>
+            <li class="prefooter-ul-li"><a href="https://twitter.com/Work & travels"><img src=".././img/twiter icon.png" alt="twiter-icon"></a></li>
         </ul>
     </section>
     <footer>
