--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>Work & Travel</title>
     <link rel="shortcut icon" href="./img/plane.png">
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> 
+    <meta name="description" content="Explore the business Travel World: Discover destinations, trips, and experiences in work-related journeys">
+    <meta name="keywords" content="trips, work, experience, connections, culture, work and travel">
 </head>
 <body>
     <section class="top-page">
         <header>
             <section class="header-logo">
-                <a href="./index.html"><img src="./img/circle logo.png" alt=""></a>
+                <a href="./index.html"><img src="./img/circle logo.png" alt="circuar logo with an airplane pa"></a>
             </section>
         </header>
         <nav clas="nav">
@@ -44,7 +46,7 @@
     </section>
     <main class="mainindex">
         <section class="section-one">
-            <img src="./img/Lake Blue Mountain Water River Nature.jpg" alt="" class="section-one__img">
+            <img src="./img/Lake Blue Mountain Water River Nature.jpg" alt="landscape with mountains and a lake" class="section-one__img">
             <h1>We propose you to travel the world in a different way. Be encouraged to live together with Work & travel a professional and work experience abroad. We want you to have the opportunity to meet, learn and enjoy</h1>
             <button class="section-one__button"><a href="./pages/whatweoffer.html" class="link"><h3>See More</h3></a></button>
         </section>
@@ -53,18 +55,18 @@
                 <p>A new opportunity to travel for work to Spain! This journey will not only allow you to expand your horizons and knowledge, but also establish international connections, open yourself to new perspectives, and challenge your own limits.</p>
                 <button class="section-two__button"><a href="./pages/travels.html" class="link"><h3>See More</h3></a></button>
             </div>
-            <a href="./pages/travels.html"><img src="./img/Work and Travel Spain.jpg" alt="" class="section-two__img"></a>
+            <a href="./pages/travels.html"><img src="./img/Work and Travel Spain.jpg" alt=" cathedral-Basilica del Pilar with text on top advertising a new destiny" class="section-two__img"></a>
         </section>
         <section class="section-three">
             <div class="section-three__box1">
-                <img class="section-three__img" src="./img/jetsky.jpg" alt="">
+                <img class="section-three__img" src="./img/jetsky.jpg" alt="turists using snowmobiles">
                 <article class="section-three__article">
                     <p>"Don't wait any longer and discover the perfect solution to travel wherever you want! Contact us now and secure your dream job on the other side of the world. We're here to immerse you in culture and knowledge!</p>
                     <button class="section-three__button"><a href="./pages/contactus.html" class="link"><h3>Contact us</h3></a></button>
                 </article>
             </div>
             <div class="section-three__box2">
-                <img class="section-three__img" src="./img/airport.jpg" alt="">
+                <img class="section-three__img" src="./img/airport.jpg" alt="man with luggage on an airport">
                 <article class="section-three__article">
                     <p>We work closely with international companies and organizations to ensure that we offer a wide range of interesting job opportunities.</p>
                     <button class="section-three__button"><a href="./pages/aboutus.html" class="link"><h3>More Info.</h3></a></button>
@@ -74,9 +76,9 @@
     </main>
     <section class="prefooter">
         <ul class="prefooter-ul">
-            <li class="prefooter-ul-li"><a href="https://www.facebook.com/Work & travels"><img src="./img/facebook icon.png" alt="facebook-icon"></a></li>
-            <li class="prefooter-ul-li"><a href="https://www.instagram.com/Work & travels/"><img src="./img/instagram icon.png" alt="instagram-icon"></a></li>
-            <li class="prefooter-ul-li"><a href="https://twitter.com/Work & travels"><img src="./img/twiter icon.png" alt="twiter-icon"></a></li>
+            <li class="prefooter-ul-li"><a href="https://www.facebook.com/Work & travels"><img src="./img/facebook icon.png" alt="facebook icon"></a></li>
+            <li class="prefooter-ul-li"><a href="https://www.instagram.com/Work & travels/"><img src="./img/instagram icon.png" alt="instagram icon"></a></li>
+            <li class="prefooter-ul-li"><a href="https://twitter.com/Work & travels"><img src="./img/twiter icon.png" alt="twiter icon"></a></li>
         </ul>
     </section>
     <footer>
