--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="top-page">
         <header>
             <section class="header-logo">
-                <a href="./index.html"><img src="./img/circle logo.png" alt="circuar logo with an airplane pa"></a>
+                <a href="./index.html"><img src="./img/circle logo.png" alt="circular logo with an airplane"></a>
             </section>
         </header>
         <nav clas="nav">
@@ -28,7 +28,7 @@
         <div class="navresponsive">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <div class="navresponsive__div"><a href="./index.html"><img src="./img/circle logo.png" alt="" class="navresponsive__img"></a></div>
+                    <div class="navresponsive__div"><a href="./index.html"><img src="./img/circle logo.png" alt="circular logowith an airplane" class="navresponsive__img"></a></div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
                         <span class="navbar-toggler-icon" ></span>
                     </button>
