--- a/pages/travels.html
+++ b/pages/travels.html
@@ -7,12 +7,14 @@
     <link rel="shortcut icon" href="../img/plane.png">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <meta name="description" content="select the destination you would like to work and travel">
+    <meta name="keywords" content="work, trip, work and travel, experience, connections, culture">
 </head>
 <body>
     <section class="top-page">
         <header>
             <section class="header-logo">
-                <a href=".././index.html"><img src=".././img/circle logo.png" alt=""></a>
+                <a href=".././index.html"><img src=".././img/circle logo.png" alt="circular logo with an airplane"></a>
             </section>
         </header>
         <nav clas="nav">
@@ -26,7 +28,7 @@
         <div class="navresponsive">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <div class="navresponsive__div"><a href=".././index.html"><img src=".././img/circle logo.png" alt="" class="navresponsive__img"></a></div>
+                    <div class="navresponsive__div"><a href=".././index.html"><img src=".././img/circle logo.png" alt="circular logo with an airplane" class="navresponsive__img"></a></div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
                         <span class="navbar-toggler-icon" ></span>
                     </button>
@@ -53,7 +55,7 @@
                     <div class="col-lg-6 column1">
                         <div class="row">
                             <div class="col-12 column1-img" >
-                                <div class="column__img"><a href="./contactus.html"><img src=".././img/Workandtravel in USA.jpg" alt=""></a></div>
+                                <div class="column__img"><a href="./contactus.html"><img src=".././img/Workandtravel in USA.jpg" alt="happy tourists skiing"></a></div>
                             </div>
                         </div>
                         <div class="row">
@@ -95,7 +97,7 @@
                     <div class="col-lg-6 column2">
                         <div class="row">
                             <div class="col-12 column2-img" >
-                                <div class="column__img"><a href="./contactus.html"><img src=".././img/Madrid_spanish.jpg" alt=""></a></div>
+                                <div class="column__img"><a href="./contactus.html"><img src=".././img/Madrid_spanish.jpg" alt="an image of madrid"></a></div>
                             </div>
                         </div>
                         <div class="row">
@@ -137,7 +139,7 @@
                     <div class="col-lg-6 column3">
                         <div class="row">
                             <div class="col-12 column3-img" >
-                                <div class="column__img"><a href="./contactus.html"><img src=".././img/sumer camp.jpg" alt=""></a></div>
+                                <div class="column__img"><a href="./contactus.html"><img src=".././img/sumer camp.jpg" alt="two lifeguards at a summercamp in usa"></a></div>
                             </div>
                         </div>
                         <div class="row">
