--- a/pages/whatweoffer.html
+++ b/pages/whatweoffer.html
@@ -7,12 +7,14 @@
     <link rel="shortcut icon" href="../img/plane.png">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <meta name="description" content="explore the business travel wolrd: discover destinations, tips and experiences in work-related journeys">
+    <meta name="keywords" content="work, trips, experiences, connections, culture, work and travel">
 </head>
 <body>
     <section class="top-page">
         <header>
             <section class="header-logo">
-                <a href=".././index.html"><img src=".././img/circle logo.png" alt=""></a>
+                <a href=".././index.html"><img src=".././img/circle logo.png" alt="circular logo with an airplane"></a>
             </section>
         </header>
         <nav clas="nav">
@@ -26,7 +28,7 @@
         <div class="navresponsive">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <div class="navresponsive__div"><a href=".././index.html"><img src=".././img/circle logo.png" alt="" class="navresponsive__img"></a></div>
+                    <div class="navresponsive__div"><a href=".././index.html"><img src=".././img/circle logo.png" alt="circular logo with an airplane" class="navresponsive__img"></a></div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
                         <span class="navbar-toggler-icon" ></span>
                     </button>
