--- a/pages/travels.html
+++ b/pages/travels.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work & Travel</title>
     <link rel="shortcut icon" href="../img/plane.png">
-    <link rel="stylesheet" href="../css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <meta name="description" content="select the destination you would like to work and travel">
     <meta name="keywords" content="work, trip, work and travel, experience, connections, culture">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <section class="top-page">
@@ -28,16 +28,18 @@
         <div class="navresponsive">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <div class="navresponsive__div"><a href=".././index.html"><img src=".././img/circle logo.png" alt="circular logo with an airplane" class="navresponsive__img"></a></div>
+                    <div class="navresponsive__div">
+                        <a href=".././index.html"><img src=".././img/circle logo.png" alt="circular logo with an airplane" class="navresponsive__img"></a>
+                    </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
                         <span class="navbar-toggler-icon" ></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
                         <div class="navbar-nav">
-                        <a class="nav-link" href="./travels.html">Travels</a>
-                        <a class="nav-link" href="./whatweoffer.html">What we offer</a>
-                        <a class="nav-link" href="./aboutus.html">about us</a>
-                        <a class="nav-link" href="./contactus.html">contact us</a>
+                            <a class="nav-link" href="./travels.html">Travels</a>
+                            <a class="nav-link" href="./whatweoffer.html">What we offer</a>
+                            <a class="nav-link" href="./aboutus.html">about us</a>
+                            <a class="nav-link" href="./contactus.html">contact us</a>
                         </div>
                     </div>
                 </div>
@@ -60,7 +62,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12 column__h1 white">
-                                <h1><b>Trip to USA (Cold and snow)</b></h1>
+                                <h2><b>Trip to USA (Cold and snow)</b></h2>
                             </div>
                         </div>
                         <div class="row">
@@ -70,7 +72,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12 column__h2 white">
-                            <h2>Requirements</h2>
+                                <h2>Requirements</h2>
                             </div>
                         </div>
                         <div class="pad-bottom">
@@ -102,7 +104,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12 column__h1 white">
-                                <h1><b>Trip to Spain (new)</b></h1>
+                                <h2><b>Trip to Spain (new)</b></h2>
                             </div>
                         </div>
                         <div class="row">
@@ -112,7 +114,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12 column__h2 white">
-                            <h2>Requirements</h2>
+                                <h2>Requirements</h2>
                             </div>
                         </div>
                         <div class="pad-bottom">
@@ -144,7 +146,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12 column__h1 white">
-                                <h1><b>Trip to USA (Summer camp)</b></h1>
+                                <h2><b>Trip to USA (Summer camp)</b></h2>
                             </div>
                         </div>
                         <div class="row">
@@ -154,7 +156,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12 column__h2 white">
-                            <h2>Requirements</h2>
+                                <h2>Requirements</h2>
                             </div>
                         </div>
                         <div class="pad-bottom">
