--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work & Travel</title>
     <link rel="shortcut icon" href="../img/plane.png">
-    <link rel="stylesheet" href="../css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <meta name="description" content="explore the business travel world: discover destinations, tips and experiences in work-related journeys">
     <meta name="keyword" content="work, trip, experiences, connections, culture, work and travel">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <section class="top-page">
@@ -28,16 +28,18 @@
         <div class="navresponsive">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <div class="navresponsive__div"><a href=".././index.html"><img src=".././img/circle logo.png" alt="circular logo with an airplane" class="navresponsive__img"></a></div>
+                    <div class="navresponsive__div">
+                        <a href=".././index.html"><img src=".././img/circle logo.png" alt="circular logo with an airplane" class="navresponsive__img"></a>
+                    </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
                         <span class="navbar-toggler-icon" ></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
                         <div class="navbar-nav">
-                        <a class="nav-link" href="./travels.html">Travels</a>
-                        <a class="nav-link" href="./whatweoffer.html">What we offer</a>
-                        <a class="nav-link" href="./aboutus.html">about us</a>
-                        <a class="nav-link" href="./contactus.html">contact us</a>
+                            <a class="nav-link" href="./travels.html">Travels</a>
+                            <a class="nav-link" href="./whatweoffer.html">What we offer</a>
+                            <a class="nav-link" href="./aboutus.html">about us</a>
+                            <a class="nav-link" href="./contactus.html">contact us</a>
                         </div>
                     </div>
                 </div>
@@ -48,17 +50,17 @@
         <section class="main__text">
             <h1>About us</h1>
             <p>"We are a leading company with over a year of experience in the Work and Travel field. Our team consists of highly skilled professionals with extensive knowledge in work-related travel. We take pride in having a dedicated and passionate group of employees who stay updated on the latest trends and advancements in our industry.</p>
-            <p>En Work and Travel, nos destacamos por nuestra excelencia en la ejecución de proyectos, brindando soluciones innovadoras y adaptadas a las necesidades de nuestros clientes. Nuestro equipo multidisciplinario, compuesto por expertos en brindar viajes por trabajo, trabaja en colaboración para ofrecer resultados sobresalientes y superar las expectativas.</p>
+            <p>At Work and Travel, we stand out for our excellence in project execution, providing innovative solutions adapted to the needs of our clients. Our multidisciplinary team, made up of experts in business travel, works collaboratively to deliver outstanding results and exceed expectations.</p>
             <p>Quality is our top priority. Every project we undertake is approached with meticulousness and attention to detail, ensuring first-class outcomes. Moreover, we take pride in maintaining strong and lasting relationships with our clients, built on mutual trust and transparency.In addition to our expertise and specialized knowledge, we distinguish ourselves through our customer-oriented approach. We strive to thoroughly understand our clients' needs and work closely with them at every stage of the project. This collaboration enables us to offer personalized and efficient solutions that have a positive impact on their operations and final outcomes.</p>
         </section>
-        <section class="Where to find us">
+        <section class="Wheretofindus">
             <section class="main__text">
-                <h1>Where to find us</h1>
+                <h2>Where to find us</h2>
             </section>
             <section class="map">
-            <div class="container__map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105160.15430051013!2d-58.58667814160014!3d-34.54710295093994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb594b2c72ed9%3A0xd9d2ea7f6db578d3!2sWATAR!5e0!3m2!1ses!2sar!4v1689713778369!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+                <div class="container__map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105160.15430051013!2d-58.58667814160014!3d-34.54710295093994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb594b2c72ed9%3A0xd9d2ea7f6db578d3!2sWATAR!5e0!3m2!1ses!2sar!4v1689713778369!5m2!1ses!2sar" class="iframe__map" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </section>
         </section>
     </main>
