--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work & Travel</title>
     <link rel="shortcut icon" href="../img/plane.png">
-    <link rel="stylesheet" href="../css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <meta name="description" content="explore the business travel world: discover destinations, tips and experiences in work-related journeys">
     <meta name="keywords" content="work, trip, experience, connections, culture, work and travel"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <section class="top-page">
@@ -28,16 +28,18 @@
         <div class="navresponsive">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <div class="navresponsive__div"><a href=".././index.html"><img src=".././img/circle logo.png" alt="circular logo with an airplane" class="navresponsive__img"></a></div>
+                    <div class="navresponsive__div">
+                        <a href=".././index.html"><img src=".././img/circle logo.png" alt="circular logo with an airplane" class="navresponsive__img"></a>
+                    </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
                         <span class="navbar-toggler-icon" ></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
                         <div class="navbar-nav">
-                        <a class="nav-link" href="./travels.html">Travels</a>
-                        <a class="nav-link" href="./whatweoffer.html">What we offer</a>
-                        <a class="nav-link" href="./aboutus.html">about us</a>
-                        <a class="nav-link" href="./contactus.html">contact us</a>
+                            <a class="nav-link" href="./travels.html">Travels</a>
+                            <a class="nav-link" href="./whatweoffer.html">What we offer</a>
+                            <a class="nav-link" href="./aboutus.html">about us</a>
+                            <a class="nav-link" href="./contactus.html">contact us</a>
                         </div>
                     </div>
                 </div>
